--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Store | Login</title>
+    <title>TMS | Login</title>
     <meta name="description" content="Ela Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,7 +34,7 @@
             <div class="login-content">
                 <div class="login-logo">
                     <h2 style="color: #fff">Transport Management System</h2>
-                </div>
+                </div><br>
                 <div class="login-form">
                     <form method="POST">
                         {% csrf_token %}
