client spelling change

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -148,7 +148,7 @@
                                         <th>Loading Date</th>
                                         <th>Origin</th>
                                         <th>Destination</th>
-                                        <th>Freight_Amount</th>
+                                        <th>Freight Amount</th>
                                         <th>Created Date</th>
                                         <th>Status</th>
                                     </tr>
