--- a/templates/transport_management/create_client.html
+++ b/templates/transport_management/create_client.html
@@ -18,7 +18,7 @@
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
                             <li><a href="#">Dashboard</a></li>
-                            <li><a href="#">Cleint</a></li>
+                            <li><a href="#">Client</a></li>
                             <li class="active">Create</li>
                         </ol>
                     </div>
@@ -76,7 +76,7 @@
                             </div> -->
                             <div>
                                 <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
-                                    <span id="payment-button-amount">Create Cleint</span>
+                                    <span id="payment-button-amount">Create Client</span>
                                 </button>
                             </div>
                         </form>
