expense tab addition and veh und maint calculations

--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -54,6 +54,14 @@
                         <li><i class="fa fa-th"></i><a href="{% url 'booking-list' %}">View</a></li>
                     </ul>
                 </li>
+
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-money"></i>Expense</a>
+                    <ul class="sub-menu children dropdown-menu">
+                        <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-expense' %}">Add</a></li>
+                        <li><i class="fa fa-th"></i><a href="{% url 'expense-list' %}">View</a></li>
+                    </ul>
+                </li>
 {% comment %} 
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-truck"></i>POD</a>
