--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -119,6 +119,24 @@
             </div>
         </div>
 
+        <div class="col-lg-3 col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <div class="stat-widget-five">
+                        <div class="stat-icon dib flat-color-2">
+                            <i class="fa fa-money"></i>
+                        </div>
+                        <div class="stat-content">
+                            <div class="text-left dib">
+                                <div class="stat-text"><span class="count">{{ expenses }}</span></div>
+                                <div class="stat-heading">Expense (₹)</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         
     </div>
