--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -62,14 +62,14 @@
                         <li><i class="fa fa-th"></i><a href="{% url 'expense-list' %}">View</a></li>
                     </ul>
                 </li>
-{% comment %} 
+
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-truck"></i>POD</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-delivery' %}">Add</a></li>
-                        <li><i class="fa fa-th"></i><a href="{% url 'delivery-list' %}">View</a></li>
+                        <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-pod' %}">Add</a></li>
+                        <li><i class="fa fa-th"></i><a href="{% url 'pod-list' %}">View</a></li>
                     </ul>
-                </li> {% endcomment %}
+                </li>
             </ul> 
         </div><!-- /.navbar-collapse -->
     </nav>
