--- a/templates/transport_management/booking_list.html
+++ b/templates/transport_management/booking_list.html
@@ -18,7 +18,7 @@
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
                             <li><a href="#">Dashboard</a></li>
-                            <li><a href="#">booking</a></li>
+                            <li><a href="#">Booking</a></li>
                             <li class="active">List</li>
                         </ol>
                     </div>
