icon changes in dashboard and sidebar

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-1">
-                            <i class="fa fa-cart-plus"></i>
+                            <i class="fa fa-caret-square-o-right"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
@@ -32,13 +32,13 @@
             <div class="card">
                 <div class="card-body">
                     <div class="stat-widget-five">
-                        <div class="stat-icon dib flat-color-3">
-                            <i class="fa fa-user"></i>
+                        <div class="stat-icon dib flat-color-6">
+                            <i class="fa fa-user-circle-o"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">{{ client }}</span></div>
-                                <div class="stat-heading">Client</div>
+                                <div class="stat-heading">Clients</div>
                             </div>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">{{ product }}</span></div>
-                                <div class="stat-heading">Product</div>
+                                <div class="stat-heading">Products</div>
                             </div>
                         </div>
                     </div>
@@ -123,13 +123,13 @@
             <div class="card">
                 <div class="card-body">
                     <div class="stat-widget-five">
-                        <div class="stat-icon dib flat-color-2">
+                        <div class="stat-icon dib flat-color-7">
                             <i class="fa fa-money"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">{{ expenses }}</span></div>
-                                <div class="stat-heading">Expense (₹)</div>
+                                <div class="stat-heading">Expenses (₹)</div>
                             </div>
                         </div>
                     </div>
@@ -142,12 +142,12 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-2">
-                            <i class="fa fa-truck"></i>
+                            <i class="fa fa-envelope-open"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">{{ pod }}</span></div>
-                                <div class="stat-heading">POD Received</div>
+                                <div class="stat-heading">PODs Received</div>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-2">
-                            <i class="fa fa-truck"></i>
+                            <i class="fa fa-envelope"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
