--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -8,7 +8,7 @@
                 <li class="menu-title">Transport Management</li><!-- /.menu-title -->
                 
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-user"></i>Client</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-user-circle-o"></i>Client</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-client' %}">Add</a></li>
                         <li><i class="fa fa-th"></i><a href="{% url 'client-list' %}">View</a></li>
@@ -32,7 +32,7 @@
                 </li>
 
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-archive"></i>Driver</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users"></i>Driver</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-driver' %}">Add</a></li>
                         <li><i class="fa fa-th"></i><a href="{% url 'driver-list' %}">View</a></li>
@@ -48,7 +48,7 @@
                 </li>
 
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-cart-plus"></i>Booking</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-caret-square-o-right"></i>Booking</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-booking' %}">Add</a></li>
                         <li><i class="fa fa-th"></i><a href="{% url 'booking-list' %}">View</a></li>
@@ -64,7 +64,7 @@
                 </li>
 
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-truck"></i>POD</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-envelope-open"></i>POD</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-pod' %}">Add</a></li>
                         <li><i class="fa fa-th"></i><a href="{% url 'pod-list' %}">View</a></li>
@@ -76,6 +76,14 @@
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-payment' %}">Add</a></li>
                         <li><i class="fa fa-th"></i><a href="{% url 'payment-list' %}">View</a></li>
+                    </ul>
+                </li>
+
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-file-text"></i>Invoice</a>
+                    <ul class="sub-menu children dropdown-menu">
+                        {% comment %} <li><i class="fa fa-id-card-o"></i><a href="{% url 'create-payment' %}">Add</a></li>
+                        <li><i class="fa fa-th"></i><a href="{% url 'payment-list' %}">View</a></li> {% endcomment %}
                     </ul>
                 </li>
 
