--- a/templates/transport_management/create_client.html
+++ b/templates/transport_management/create_client.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Create Cleint{% endblock title %}
+{% block title %}Create Client{% endblock title %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
