--- a/templates/transport_management/create_product.html
+++ b/templates/transport_management/create_product.html
@@ -41,6 +41,7 @@
                 <div id="pay-invoice">
                     <div class="card-body">
                         <form action="#" method="post" novalidate="novalidate">
+                            <div>
                             {% csrf_token %}
                             {{form}}
                             {% comment %} <div class="form-group">
