--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -33,6 +33,7 @@
         <div class="container">
             <div class="login-content">
                 <div class="login-logo">
+                    <h1 style="color: #fff">Vidhi Trailer Services</h2>
                     <h2 style="color: #fff">Transport Management System</h2>
                 </div><br>
                 <div class="login-form">
