--- a/templates/transport_management/create_driver.html
+++ b/templates/transport_management/create_driver.html
@@ -41,18 +41,19 @@
                 <div id="pay-invoice">
                     <div class="card-body">
                         <form action="#" method="post" novalidate="novalidate">
-                            {% csrf_token %}
-                            {{form}}
-                            <br>
-                            {% comment %} <div class="form-group">
-                                <label for="name" class="control-label mb-1">Name</label>
-                                {{ form.name }}
-                            </div>
-                            <div class="form-group">
-                                <label for="description" class="control-label mb-1">Description</label>
-                                {{ form.description }}
-                            </div>
-                            <div> {% endcomment %}
+                            <div>
+                                {% csrf_token %}
+                                {{form}}
+                                    <br>
+                                    {% comment %} <div class="form-group">
+                                        <label for="name" class="control-label mb-1">Name</label>
+                                        {{ form.name }}
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="description" class="control-label mb-1">Description</label>
+                                        {{ form.description }}
+                                    </div>
+                                    <div> {% endcomment %}
                                 <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                     <span id="payment-button-amount">Create Driver</span>
                                 </button>
