--- a/templates/transport_management/payment_list.html
+++ b/templates/transport_management/payment_list.html
@@ -37,7 +37,15 @@
                 <h4 class="box-title">Payment List </h4>
             </div>
             <div class="card-body--">
-                <div class="table-stats payment-table ov-h">
+                {% for msg in messages %}
+                    <div class="col-xl-12"><div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <strong>Message:</strong> {{ msg }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+                <div class="table-stats order-table ov-h">
                     <table class="table ">
                         <thead>
                             <tr>
