--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -139,7 +139,7 @@
 
         <div class="col-lg-3 col-md-6">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body"><a href="{% url 'pod-received-list' %}">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-2">
                             <i class="fa fa-envelope-open"></i>
@@ -151,13 +151,31 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div></a>
             </div>
         </div>
 
         <div class="col-lg-3 col-md-6">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body"><a href="{% url 'pod-not-received-list' %}">
+                    <div class="stat-widget-five">
+                        <div class="stat-icon dib flat-color-2">
+                            <i class="fa fa-envelope-open"></i>
+                        </div>
+                        <div class="stat-content">
+                            <div class="text-left dib">
+                                <div class="stat-text"><span class="count">{{ podno }}</span></div>
+                                <div class="stat-heading">PODs Not Received</div>
+                            </div>
+                        </div>
+                    </div>
+                </div></a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <div class="card">
+                <div class="card-body"><a href="{% url 'ak-ok-list' %}">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-2">
                             <i class="fa fa-envelope"></i>
@@ -165,11 +183,29 @@
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">{{ aknowledgement }}</span></div>
-                                <div class="stat-heading">Aknowledgement Not Ok</div>
+                                <div class="stat-heading">Aknowledgements Ok</div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div></a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <div class="card">
+                <div class="card-body "><a href="{% url 'ak-notok-list' %}">
+                    <div class="stat-widget-five" >
+                        <div class="stat-icon dib flat-color-2">
+                            <i class="fa fa-envelope"></i>
+                        </div>
+                        <div class="stat-content">
+                            <div class="text-left dib">
+                                <div class="stat-text"><span class="count">{{ aknowledgementok }}</span></div>
+                                <div class="stat-heading">Aknowledgements Not Ok</div>
+                            </div>
+                        </div>
+                    </div>
+                </div></a>
             </div>
         </div>
 
