--- a/templates/transport_management/update_booking.html
+++ b/templates/transport_management/update_booking.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Create Order{% endblock title %}
+{% block title %}Create Booking{% endblock title %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
@@ -18,7 +18,7 @@
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
                             <li><a href="#">Dashboard</a></li>
-                            <li><a href="#">Order</a></li>
+                            <li><a href="#">Booking</a></li>
                             <li class="active">Create</li>
                         </ol>
                     </div>
@@ -34,7 +34,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <strong class="card-title">Create Order</strong>
+                <strong class="card-title">Create Booking</strong>
             </div>
             <div class="card-body">
                 <!-- Credit Card -->
