vehicle_under_maintanancelist, email and phone proper validations, minor changes

--- a/templates/transport_management/booking_list.html
+++ b/templates/transport_management/booking_list.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}booking List{% endblock title %}
+{% block title %}Booking List{% endblock title %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
