--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -85,7 +85,7 @@
 
         <div class="col-lg-3 col-md-6">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body"><a href="{% url 'vehicle-under-maintanance-list' %}">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-4">
                             <i class="fa fa-chevron-circle-down"></i>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div></a>
             </div>
         </div>
 
